# BioDataViz

./: CONTRIBUTING.md  PoC.ipynb  README.md  pyproject.toml
biodataviz/common/: plotting.py  stats.py  user_settings.py
biodataviz/controller/: viz_controller.py
biodataviz/core/: plotting.py  stats.py  user_settings.py
biodataviz/twogroupsnorepeatedmeasures/: stats.py
biodataviz/twogroupsnorepeatedmeasures/stripplot/: plotting.py  user_settings.py
